# llm-client

./: .gitignore  CHANGELOG.md  LICENSE  README.md  llm-client.cabal  stack.yaml
src/app/: Main.hs
src/app/LLMClient/: Opts.hs
src/lib/LLMClient/: Common.hs  Curl.hs  HTTP.hs  Http.hs
src/lib/LLMClient/System/: Log.hs
src/test/: Main.hs
