cabal-version: 2.2

name: llm-client
version: 1.1
-- synopsis:
-- description:
author: Dino Morelli
maintainer: dino@ui3.info
copyright: 2024 Dino Morelli
category: Unclassified
license: ISC
license-file: LICENSE
build-type: Simple
extra-source-files:
  CHANGELOG.md
  .gitignore
  README.md
  stack.yaml

source-repository head
  type: git
  location: https://github.com/dino-/llm-client

common lang
  default-language: Haskell2010
  default-extensions:
    BangPatterns
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
  ghc-options:
    -fwarn-tabs
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
  build-depends:
      base >=3 && <5

library
  import: lang
  exposed-modules:
      LLMClient.Common
      LLMClient.HTTP
      LLMClient.System.Log
  hs-source-dirs:
    src/lib
  build-depends:
      aeson
    , bytestring
    , formatting
    , hslogger
    , lens-aeson
    , microlens
    , string-conv
    , text
    , wreq

executable llm-client
  import: lang
  main-is: Main.hs
  hs-source-dirs:
    src/app
  other-modules:
    LLMClient.Opts
    Paths_llm_client
  autogen-modules:
    Paths_llm_client
  build-depends:
      formatting
    , heredoc
    , llm-client
    , optparse-applicative
    , prettyprinter
    , text

-- test-suite basic-wrk-test-suite
--   import: lang
--   type: exitcode-stdio-1.0
--   main-is: Main.hs
--   hs-source-dirs:
--     src/test
--   ghc-options: -rtsopts -threaded -with-rtsopts=-N
--   build-depends:
--       llm-client
--     , tasty
--     , tasty-hunit
--     , tasty-quickcheck
