cabal-version: 2.2

name: llm-client
version: 1.2
-- synopsis:
-- description:
author: Dino Morelli
maintainer: dino@ui3.info
copyright: 2024 Dino Morelli
category: Unclassified
license: ISC
license-file: LICENSE
build-type: Simple
extra-source-files:
  CHANGELOG.md
  .gitignore
  README.md
  stack.yaml

source-repository head
  type: git
  location: https://github.com/dino-/llm-client

common lang
  default-language: Haskell2010
  default-extensions:
    BangPatterns
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
  ghc-options:
    -fwarn-tabs
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
  build-depends:
      base >=3 && <5
    , formatting
    , text

library
  import: lang
  exposed-modules:
    LLMClient.Common
    LLMClient.HTTP
    LLMClient.System.Log
  hs-source-dirs:
    src/lib
  build-depends:
      aeson
    , bytestring
    , hslogger
    , http-client
    , servant
    , servant-client
    , string-conv

executable llm-client
  import: lang
  main-is: Main.hs
  hs-source-dirs:
    src/app
  other-modules:
    LLMClient.Opts
    Paths_llm_client
  autogen-modules:
    Paths_llm_client
  build-depends:
    , heredoc
    , llm-client
    , optparse-applicative
    , prettyprinter
